2001-11-12  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (main): Slight formatting tweak.

2001-11-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Add some more details.

2001-11-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Print more detailed OS information string
	using OSVERSIONINFOEX information.

2001-11-11  Christopher Faylor  <cgf@redhat.com>

	* path.h: New file.

2001-11-11  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (scan_registry): Open registry with read-only access.
	(main): Reflect argument change for dump_setup.
	* dump_setup.cc (dump_setup): Add preliminary extra argument for future
	use.
	* path.cc (read_mounts): Open registry with read-only access.

2001-11-11  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (main): Display package info when '-s' is specified.
	* dump_setup.cc (dump_setup): Change header.  Remove typo.  Always sort
	packages output.

2001-11-11  Christopher Faylor  <cgf@redhat.com>

	* dump_setup.cc: New file.
	* Makefile.in: Add info for dump_setup.o.
	* cygcheck.cc (main): Recognize '-c' option for checking setup
	installed base.
	* path.cc (cygpath): Read mount table if not loaded.

2001-11-10  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (cygcheck.exe): Compile as -mno-cygwin executable.
	* path.cc: New file.
	* cygcheck.cc (init_paths): Use MS-DOS path syntax.
	(cygwin_info): Properly display cygwin version numbers.  Prettify some
	output.
	(dump_sysinfo): Calculate max names of posix and ms-dos paths for
	prettier output.

2001-11-09  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Print more detailed OS information string.

2001-11-04  Corinna Vinschen  <corinna@vinschen.de>

	* getfacl.c (username): New function.
	(groupname): Ditto.
	(usage): Ditto.  Add more user friendly help text.
	(main): Add -n and --help option.  Print names instead of IDs
	unless -n option is given.