@@ -1,3 +1,7 @@
+2001-11-12  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygcheck.cc (dump_sysinfo): Redefine output format slightly.
+
 2001-11-12  Christopher Faylor  <cgf@redhat.com>
 
 	* cygcheck.cc (main): Slight formatting tweak.
